--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
-name: Docker Frontend
-on:
-  push:
-    branches:
-      - master
- 
+name: Docker Frontend unit tests
+
+on: [push]
+
 jobs:
-  build:
+  unit-test:
     runs-on: ubuntu-latest
     steps:
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t vik98/docker-frontend -f Dockerfile.dev .
-      - run: docker run -e CI=true vik98/docker-frontend npm test
+    - uses: actions/checkout@v2
+    - name: Build dockerfile
+      run: docker build -t vik98/docker-frontend -f Dockerfile.dev .
+    - name: Run tests
+      run: docker run -e CI=true vik98/docker-frontend npm test
