--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build dockerfile
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       run: docker build -t vik98/docker-frontend -f Dockerfile.dev .
     - name: Run tests
       run: docker run -e CI=true vik98/docker-frontend npm test
